--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -4,16 +4,35 @@
         <title>Jinming's blog</title>
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
-        <link href="//fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext" rel="stylesheet" type="text/css">
+        <link href='//fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" href="{% static 'css/blog.css' %}">
+        <link rel="stylesheet" href="{% static 'css/navigation_bar.css' %}">
+        {% block head %}
+        {% endblock %}
     </head>
+
     <body>
+    <div class="header-navigation">
         <div class="page-header">
-            {% if user.is_authenticated %}
-                <a href="{% url 'post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
-            {% endif %}
             <h1><a href="/">Jinming's Blog</a></h1>
         </div>
+
+        <div class="navigation-bar">
+            <ul>
+                <li><a class="active" href="/">Home</a></li><li><a href="{% url 'post_list' %}">Posts</a></li><div class="dropdown">
+                    <a href="/" class="dropbtn">dropdown</a>
+                    <div class="dropdown-content">
+                        <a href="#">link 1</a>
+                        <a href="#">link 2</a>
+                        <a href="#">link 3</a>
+                    </div>
+                </div>
+                    {% block navigation %}
+                    {% endblock %}
+            </ul>
+        </div>
+    </div>
+
         <div class="content container">
             <div class="row">
                 <div class="col-md-8">
