--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -1,5 +1,15 @@
 {% extends 'blog/base.html' %}
 
+
+{% block navigation %}
+    {% if user.is_authenticated %}
+        <div class="submission-choice">
+            <li><a href="{% url 'post_edit' pk=post.pk %}">Edit</a></li>
+            <li><a href="{% url 'post_delete' pk=post.pk %}">Delete</a></li>
+        </div>
+    {% endif %}
+{% endblock %}
+
 {% block content %}
     <div class="post">
         {% if post.published_date %}
@@ -7,10 +17,9 @@
                 {{ post.published_date }}
             </div>
         {% endif %}
-        {% if user.is_authenticated %}
-             <a class="btn btn-default" href="{% url 'post_edit' pk=post.pk %}"><span class="glyphicon glyphicon-pencil"></span></a>
-        {% endif %}
+
         <h2>{{ post.title }}</h2>
         <p>{{ post.text|linebreaksbr }}</p>
+
     </div>
 {% endblock %}
