--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,4 +1,11 @@
 {% extends 'blog/base.html' %}
+{% block navigation %}
+    {% if user.is_authenticated %}
+        <div class="submission-choice">
+            <a href="{% url 'post_new' %}">Create</a>
+        </div>
+    {% endif %}
+{% endblock %}
 
 {% block content %}
     {% for post in posts %}
@@ -6,7 +13,7 @@
             <div class="date">
                 {{ post.published_date }}
             </div>
-            <h2><a href="">{{ post.title }}</a></h2>
+            <h2><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h2>
             <p>{{ post.text|linebreaksbr }}</p>
         </div>
     {% endfor %}
