--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -1,40 +1,56 @@
+.header-navigation {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    width: 100%;
+    z-index: 1000;
+}
+
 .page-header {
-    background-color: skyblue;
+    background-color: deepskyblue;
     margin-top: 0;
+    margin-bottom: 0;
+    border: none;
     padding: 20px 20px 20px 40px;
 }
 
 .page-header h1, .page-header h1 a, .page-header h1 a:visited, .page-header h1 a:active {
-    color: #ffffff;
+    color: greenyellow;
     font-size: 36pt;
     text-decoration: none;
+
 }
 
 .content {
     margin-left: 40px;
+    position: relative;
+    margin-top: 200px;
 }
 
-h1, h2, h3, h4 {
+h1 {
     font-family: 'Lobster', cursive;
+}
+
+h2 {
+    font-family: "Bitstream Vera Sans Mono", Monaco, "Courier New", Courier, monospace;
+}
+
+h3 {
+    font-family: "Roboto", "Lucida Grande", "DejaVu Sans", "Bitstream Vera Sans", Verdana, Arial, sans-serif;
+}
+
+h4 {
+    font-family: "Roboto", "Lucida Grande", Verdana, Arial, sans-serif;
 }
 
 .date {
     color: #828282;
 }
 
-.save {
-    float: right;
-}
 
 .post-form textarea, .post-form input {
     width: 100%;
-}
-
-.top-menu, .top-menu:hover, .top-menu:visited {
-    color: #ffffff;
-    float: right;
-    font-size: 26pt;
-    margin-right: 20px;
 }
 
 .post {
