--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -8,7 +8,7 @@
 }
 
 .page-header {
-    background-color: deepskyblue;
+    background-color: skyblue;
     margin-top: 0;
     margin-bottom: 0;
     border: none;
@@ -16,7 +16,7 @@
 }
 
 .page-header h1, .page-header h1 a, .page-header h1 a:visited, .page-header h1 a:active {
-    color: greenyellow;
+    color: forestgreen;
     font-size: 36pt;
     text-decoration: none;
 
