--- a/blog/static/css/navigation_btn.css
+++ b/blog/static/css/navigation_btn.css
@@ -4,7 +4,7 @@
 	text-align: left;
 	background-color: #333;
     border: none;
-    color: white;
+    color: lightpink;
     padding: 14px 16px;
     text-decoration: none;
     transition-duration: 0.3s;
@@ -14,7 +14,7 @@
 }
 
 .btn-save:hover{
-    background-color: #111;
+    background-color: deeppink;
 }
 
 .btn-quit{
