--- a/blog/templates/blog/cv.html
+++ b/blog/templates/blog/cv.html
@@ -1,3 +1,8 @@
-<html>
-    <title>CV</title>
-</html>
+{% extends 'blog/base.html' %}
+{% block navigation %}
+{% endblock %}
+{% block content %}
+    <div class="cv_page">
+        <div title="CV"><h2>Jinming's CV</h2></div>
+    </div>
+{% endblock %}
